# TransparencySDF

./: CMakeLists.txt  Makefile  README.md  hsitho.pro  hsitho.pro.user.279cfb0.4.8-pre1  ui_mainwindow.h
include/: ExpressionEvaluator.hpp  Window.hpp  mainwindow.hpp  ui_mainwindow.h
include/nodes/: CapsulePrimitiveDataModel.hpp  CollapsedNodeDataModel.hpp  ColorPickerDataModel.hpp  ConePrimitiveDataModel.hpp  CopyDataModel.hpp  (+16 more)
moc/: moc_CapsulePrimitiveDataModel.cpp  moc_CollapsedNodeDataModel.cpp  moc_ColorPickerDataModel.cpp  moc_ConePrimitiveDataModel.cpp  moc_ConnectionGraphicsObject.cpp  moc_CopyDataModel.cpp  moc_CopyNumDataModel.cpp  moc_CubePrimitiveDataModel.cpp  moc_CylinderPrimitiveDataModel.cpp  moc_DistanceFieldOutputDataModel.cpp  moc_FlowItemInterface.cpp  moc_FlowScene.cpp  moc_HexagonalPrismPrimitiveDataModel.cpp  moc_MathsDataModels.cpp  moc_Node.cpp  moc_NodeDataModel.cpp  moc_NodeGraphicsObject.cpp  moc_OperationDataModels.cpp  moc_PlanePrimitiveDataModel.cpp  moc_RotateDataModel.cpp  moc_ScaleDataModel.cpp  moc_SpherePrimitiveDataModel.cpp  moc_TimeDataModel.cpp  moc_TorusPrimitiveDataModel.cpp  moc_TranslateDataModel.cpp  moc_TriangularPrismPrimitiveDataModel.cpp  moc_Window.cpp  moc_mainwindow.cpp
nodeEditor/: ConnectionPainter.cpp  QStringStdHash.hpp
shaders/: blank.frag  blank_test_2.frag  shader.begin  shader.end  shader_IS.backup.begin  shader_IS.backup.end  shader_IS.begin  shader_IS.end  shader_IS2.begin  shader_IS2.end  wow_should_save_that.frag
src/: ExpressionEvaluator.cpp  SceneWindow.cpp  mainwindow.cpp
ui/: mainwindow.ui
(+12 files in other folders)
